--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="mechanics">MECHANICS</string>
     <string name="location">Location :</string>
     <string name="location_text">gate E</string>
-    <string name="full_name">Full name :</string>
+    <string name="full_name">Name :</string>
     <string name="contact">Contact :</string>
     <string name="contact_txt">072200000</string>
 
